Fix/members view on mobile (#92)
* Add modal if on mobile to see members

* Wrap in a container-fluid to fix the page being wider than screen on mobile

* Ajust floating member info position with new header

* Add background to modal, add bio to member info and css fixes

--- a/static/style/project_display.scss
+++ b/static/style/project_display.scss
@@ -231,7 +231,7 @@ $smLargeDivHeight: 225px;
     //top: 16%;
     top: 5em;
     left: 0.5em;
-    width: 100%;
+    width: 100vw;
     height: 68vh;
     @include breakpoint(phone) {
       height: 90vh;
